--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ logging:
 #custom
 accu-weather:
   api:
-    apiKey:
+    apiKey: ""
     hostName: "http://dataservice.accuweather.com"
     version: "v1"
 
